--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!--  index.html                                                  -->
+<!--  Author: GW Bootcamp                                         -->
+<!--                                                              -->
+<!--  Modifications:                                              -->
+<!--  2-8-2020 = Refactored for HTML5                             -->
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Webpage information                                         -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
 
+<!-- Main section                                                -->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -77,5 +84,4 @@
         &copy; 2019 Horiseon Social Solution Services, Inc.
     </footer>
 </body>
-
 </html>
