--- a/index.html
+++ b/index.html
@@ -31,53 +31,55 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <img src="./assets/images/digital-marketing-meeting.jpg " class="hero"
+    alt="Picture of a notebook containing a diagram showing what SEO can do for your business.  There is a cup of coffee as well as a cup of markers for drawing." />
     <main>
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="services">
             <img src="./assets/images/search-engine-optimization.jpg" 
-                 alt="Picture of a notebook containing a diagram showing what SEO can do for your business.  There is a cup of coffee as well as a cup of markers for drawing." />
+            class="float-left"     
+            alt="Picture of a notebook containing a diagram showing what SEO can do for your business.  There is a cup of coffee as well as a cup of markers for drawing." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" alt="Picture of a person using a laptop with their cellphone." />
+        </section>
+        <section id="online-reputation-management" class="services">
+                <img src="./assets/images/online-reputation-management.jpg" class= "float-right" alt="Picture of a person using a laptop with their cellphone." />
                 <h2>Online Reputation Management</h2>
                 <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" alt="Picture of a table being viewed from overhead with laptops and people working.  The table contains symbols and icons you would see on the web." />
+        </section>
+        <section id="social-media-marketing" class="services">
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Picture of a table being viewed from overhead with laptops and people working.  The table contains symbols and icons you would see on the web." />
                 <h2>Social Media Marketing</h2>
                 <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-        </div>
+        </section>
     </main>
     <aside>
-        <div>
+        <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Black doodle with a gear feeding into a funnel with a dollar sign coming out of the bottom of the funnel." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Black doodle of a person with a lightbulb for a head and sound waves coming out of the sides of his head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Black doodle of a gear with black and blue coins with dollar signs on the them." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </section>
     </aside>
     <footer>
         Made with ❤️️ by Horiseon<br>
