Updated portfolio page, made css file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <img src="./assets/images/digital-marketing-meeting.jpg " class="hero"
-    alt="Picture of a notebook containing a diagram showing what SEO can do for your business.  There is a cup of coffee as well as a cup of markers for drawing." />
+    alt="" />
     <main>
         <section id="search-engine-optimization" class="services">
             <img src="./assets/images/search-engine-optimization.jpg" 
